syntax = "proto3";

package fun.pullock.dubbo3.provider.api.service;

service UserService {

  rpc getUserByQuery(UserQuery) returns (User) {}

}

message UserQuery {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}